--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,244 @@
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.2.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.14.0
+backoff==2.2.1
+beautifulsoup4==4.12.2
+bleach==6.1.0
 blinker==1.8.2
+blis==0.7.11
+branca==0.7.2
+cachetools==5.4.0
+catalogue==2.0.10
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+chess==1.10.0
 click==8.1.7
+cloudpathlib==0.19.0
 colorama==0.4.6
+colorlover==0.3.0
+comm==0.2.0
+confection==0.1.5
+contourpy==1.2.0
+cosine-similarity==0.1.2
+cryptography==43.0.1
+cufflinks==0.17.3
+cycler==0.12.1
+cymem==2.0.8
+dacite==1.8.1
+DateTime==5.4
+DB-helper==1.1.0
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+Django==5.1.1
+dnspython==2.7.0
+email_validator==2.2.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+executing==2.0.1
+fastapi==0.115.2
+fastapi-cli==0.0.5
+fastjsonschema==2.19.0
+filelock==3.15.4
 Flask==3.0.3
-gunicorn==22.0.0
+Flask-SQLAlchemy==3.1.1
+folium==0.17.0
+fonttools==4.48.1
+fqdn==1.5.1
+future==1.0.0
+gensim==4.3.3
+geocoder==1.38.1
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.1.0
+h11==0.14.0
+htmlmin==0.1.12
+httpcore==1.0.6
+httptools==0.6.1
+httpx==0.27.2
+idna==3.6
+ImageHash==4.3.1
+imbalanced-learn==0.12.3
+imblearn==0.0
+ipykernel==6.28.0
+ipython==8.19.0
+ipywidgets==8.1.1
+isoduration==20.11.0
 itsdangerous==2.2.0
-Jinja2==3.1.4
-joblib==1.4.2
-MarkupSafe==2.1.5
-numpy==1.25.2
-packaging==24.1
-pandas==2.0.3
-python-dateutil==2.9.0.post0
-pytz==2024.1
-scikit-learn==1.2.2
-scipy==1.14.0
-six==1.16.0
-threadpoolctl==3.5.0
-tzdata==2024.1
-Werkzeug==3.0.4
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.2
+jovian==0.2.47
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.1
+jupyter_client==8.6.0
+jupyter_core==5.6.0
+jupyter_server==2.12.1
+jupyter_server_terminals==0.5.1
+jupyterlab==4.0.9
+jupyterlab-widgets==3.0.9
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+jupyterthemes==0.20.0
+kiwisolver==1.4.5
+langcodes==3.4.0
+language_data==1.2.0
+lesscpy==0.15.1
+llvmlite==0.43.0
+marisa-trie==1.2.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==3.0.2
+multimethod==1.12
+murmurhash==1.0.10
+mysql-connector==2.2.9
+mysql-connector-python==9.0.0
+mysqlclient==2.2.4
+nbclient==0.9.0
+nbconvert==7.13.1
+nbformat==5.9.2
+nest-asyncio==1.5.8
+networkx==3.3
+nlp==0.4.0
+nltk==3.8.1
+notebook==7.0.6
+notebook_shim==0.2.3
+numba==0.60.0
+numpy==1.26.3
+opencage==2.4.0
+orjson==3.10.7
+overrides==7.4.0
+packaging==23.2
+pandas==2.2.0
+pandocfilters==1.5.0
+parso==0.8.3
+patsy==0.5.6
+pdfminer==20191125
+pdfminer.six==20240706
+phik==0.12.4
+phonenumbers==8.13.42
+pillow==10.2.0
+platformdirs==4.1.0
+plotly==5.23.0
+ply==3.11
+preshed==3.0.9
+prometheus-client==0.19.0
+prompt-toolkit==3.0.43
+protobuf==5.27.2
+psutil==5.9.7
+pure-eval==0.2.2
+pyarrow==16.0.0
+pycparser==2.21
+pycryptodome==3.21.0
+pydantic==2.8.2
+pydantic-extra-types==2.9.0
+pydantic-settings==2.5.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+pygame==2.5.2
+Pygments==2.17.2
+PyMySQL==1.1.1
+pyparsing==3.1.1
 PyPDF2==3.0.1
-
+python-chess==1.999
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+python-multipart==0.0.12
+pytz==2023.4
+PyWavelets==1.6.0
+pywin32==306
+pywinpty==2.0.12
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+ratelim==0.1.6
+read==0.0.2
+referencing==0.32.0
+regex==2024.7.24
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.15.2
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+seaborn==0.13.2
+Send2Trash==1.8.2
+setuptools==69.0.3
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.4
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.5
+spacy==3.7.6
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.35
+sqlparse==0.5.1
+srsly==2.4.8
+stack-data==0.6.3
+starlette==0.39.2
+statsmodels==0.14.2
+streamlit==1.38.0
+tabulate==0.9.0
+tenacity==8.5.0
+terminado==0.18.0
+textblob==0.18.0.post0
+thinc==8.2.5
+threadpoolctl==3.3.0
+tinycss2==1.2.1
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.0
+txt==2020.11.12
+typeguard==4.3.0
+typer==0.12.5
+types-python-dateutil==2.8.19.14
+typing_extensions==4.12.2
+tzdata==2023.4
+ujson==5.10.0
+uri-template==1.3.0
+urllib3==2.1.0
+uuid==1.30
+uvicorn==0.31.1
+visions==0.7.6
+wasabi==1.1.3
+watchdog==4.0.1
+watchfiles==0.24.0
+wcwidth==0.2.12
+weasel==0.4.1
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+websockets==13.1
+Werkzeug==3.0.4
+widgetsnbextension==4.0.9
+wordcloud==1.9.3
+wrapt==1.16.0
+xxhash==3.4.1
+xyzservices==2024.6.0
+ydata-profiling==4.8.3
+zope.interface==6.1
